--- a/blockbase/sass/base/_normalize.scss
+++ b/blockbase/sass/base/_normalize.scss
@@ -2,6 +2,7 @@
 // Remove the margin in all browsers.
 body {
   margin: 0;
+  padding: 0;
 }
 
 // Smooth out the fonts
